# KGTraceVis

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  paper_idea_cn_dynamic_draft.md  pyproject.toml  run
.trellis/: .template-hashes.json
configs/: database.example.yaml  dataset_records.example.yaml  experiment_config.yaml  kg_config.yaml  mvtec_patchcore_thresholds.csv  mvtec_patchcore_thresholds.json  neo4j.example.yaml  noise_config.yaml  paths.yaml
data/: README.md
docs/: adapter_contracts.md  adapter_evidence_generation_plan_cn.md  backend_workflow_refactor.md  database_runtime.md  dataset_pipeline_usability_analysis.md  dataset_record_producers.md  development_plan.md  evidence_schema.md  experiment_plan.md  frontend_handoff.md  gpt_pro_discussion_brief_cn.md  group_meeting_demo_notes.md  implementation_research_plan.md  kg_construction.md  kg_hardening_pipeline.md  kgtracevis_revised_research_plan_cn.md  mvtec_rca_annotation_guide.md  ontology_schema.md  paper_experiment_protocol.md  paper_section5_acceptance.md  project_design.md  rca_kg_construction_acceptance_matrix.md  rca_kg_generation_architecture.md  reasoning_adapter_profile_refactor_plan_cn.md  research_brief.md  rootlens_case_study_results_brief.md  rootlens_chapter4_framework_handoff.md  rootlens_chapter6_evaluation_handoff.md  rootlens_dashboard.md  source_to_kg_construction_system.md  tep_kg_merge_assessment.md
paper/: README.md  main.tex
scripts/: audit_case_explainability.py  build_case_kg.py  build_dataset_records.py  build_kg.py  build_mvtec_llm_source_pack.py  build_paper_tables.py  build_rootlens_phase4_acceptance_bundle.py  build_source_kg.py  build_wafer_llm_source_pack.py  build_wm811k_stratified_records.py  calibrate_mvtec_patchcore_thresholds.py  compile_source_kg.py  dev_cuda_windows.ps1  download_model_assets.py  download_mvtec_sources.py  evaluate_paper_case_studies.py  evaluate_source_kg_compiler.py  evaluate_tep_rca.py  fit_mvtec_patchcore.py  generate_evidence.py  import_kg.py  init_postgres.py  prepare_wafer_user_study.py  replay_source_kg_reviews.py  review_source_kg.py  run_adapter_pipeline.py  run_app.py  run_end_to_end_interpretability_audit.py  run_examples.py  run_experiment_suite.py  run_feedback_update.py  run_kg_qa.py  run_mvtec_calibrated_pipeline.py  run_mvtec_patchcore_batch.py  run_noise_experiment.py  run_path_ranking.py  run_real_model_pipeline.py  run_real_model_smoke.py  run_web_api.py  smoke_mvtec_llm_kg_construction.py  (+5 more)
tests/: res.md  test_adapter_pipeline.py  test_adapters.py  test_batch_adapters.py  test_consistency_checker.py  test_entity_linker.py  test_experiment_suite.py  test_import_neo4j.py  test_kg_construction.py  test_kg_construction_build_registry.py  test_kg_construction_build_roots.py  test_kg_construction_pipeline.py  test_kg_construction_progress.py  test_kg_construction_replay_workflow.py  test_kg_construction_review_workflow.py  test_kg_construction_smoke_workflow.py  test_kg_document_extraction.py  test_kg_drafts.py  test_kg_graph.py  test_kg_materials_service.py  test_kg_overlay_validation_workflow.py  test_kg_profile_projection.py  test_kg_publish.py  test_kg_qa.py  test_kg_runtime_edit.py  test_kg_source_drafts.py  test_kg_studio.py  test_material_kg_construction_workflow.py  test_metrics.py  test_model_assets.py  test_paper_tables.py  (+36 more)
(+750 files in other folders)
