[project]
name = "kgtracevis"
version = "0.1.0"
description = "Knowledge-enhanced visual analytics pipeline for industrial anomaly detection and root-cause traceability."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "networkx>=3.0",
    "neo4j>=5.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.3",
    "tqdm>=4.0",
]

[project.optional-dependencies]
app = [
    "plotly>=5.0",
    "pyvis>=0.3",
    "streamlit>=1.30",
]
vision = [
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "scikit-image>=0.22",
]
llm = [
    "openai>=1.0",
    "tenacity>=8.0",
]
dev = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.5",
]
paper = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tabulate>=0.9",
]

[project.scripts]
kgtrace-build-kg = "kgtracevis.cli:build_kg"
kgtrace-import-kg = "kgtracevis.cli:import_kg"
kgtrace-run-demo = "kgtracevis.cli:run_demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
