[project]
name = "kgtracevis"
version = "0.1.0"
description = "Knowledge-enhanced visual analytics pipeline for industrial anomaly detection and root-cause traceability."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "networkx>=3.0",
    "neo4j>=5.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.3",
    "tqdm>=4.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
vision = [
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
]
llm = [
    "openai>=1.0",
    "tenacity>=8.0",
]
dev = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "httpx>=0.27",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.5",
]
paper = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tabulate>=0.9",
]
ml = [
    "anomalib>=2.4.1",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.14.0",
    "openvino>=2026.1.0",
    "pretrainedmodels>=0.7.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.scripts]
kgtrace-build-kg = "kgtracevis.cli:build_kg"
kgtrace-import-kg = "kgtracevis.cli:import_kg"
kgtrace-init-postgres = "scripts.init_postgres:main"
kgtrace-run-web-api = "scripts.run_web_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".agents",
    ".claude",
    ".codex",
    ".cursor",
    ".opencode",
    ".trellis",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
